--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://github.com/Zeeshan17CO50/passport_photo_generation",
+  "homepage": "http://zeeshan17co50.github.io/passport_photo_generation",
   "name": "passport-photo-generator",
   "version": "0.1.0",
   "private": true,
