homepage url corrected in package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://zeeshan17co50.github.io/passport_photo_generation",
+  "homepage": "https://zeeshan17co50.github.io/passport_photo_generation/",
   "name": "passport-photo-generator",
   "version": "0.1.0",
   "private": true,
